--- a/netlify.toml
+++ b/netlify.toml
@@ -1,36 +1,34 @@
 [build]
-  publish = "dist"
-  command = "yarn test:run && yarn build"
+publish = "dist"
+command = "yarn build"
 
 [build.environment]
-  NODE_VERSION = "20"
-  YARN_VERSION = "1.22.22"
+NODE_VERSION = "20"
+YARN_VERSION = "1.22.22"
 
 # SPA routing - redirect all routes to index.html
 [[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+from = "/*"
+to = "/index.html"
+status = 200
 
 # Security headers
 [[headers]]
-  for = "/*"
-  [headers.values]
-    X-Frame-Options = "DENY"
-    X-Content-Type-Options = "nosniff"
-    Referrer-Policy = "no-referrer"
-    X-XSS-Protection = "1; mode=block"
+for = "/*"
+[headers.values]
+X-Frame-Options = "DENY"
+X-Content-Type-Options = "nosniff"
+Referrer-Policy = "no-referrer"
+X-XSS-Protection = "1; mode=block"
 
 # Cache static assets
 [[headers]]
-  for = "/assets/*"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
+for = "/assets/*"
+[headers.values]
+Cache-Control = "public, max-age=31536000, immutable"
 
 # Don't cache HTML
 [[headers]]
-  for = "/*.html"
-  [headers.values]
-    Cache-Control = "public, max-age=0, must-revalidate"
-
-
+for = "/*.html"
+[headers.values]
+Cache-Control = "public, max-age=0, must-revalidate"
