--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && node scripts/postbuild.js",
+    "build:serve": "vite build && node scripts/postbuild.js --serve",
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
@@ -45,4 +46,3 @@
   "author": "cschweda",
   "license": "MIT"
 }
-
