--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "test:run": "vitest run",
     "test:coverage": "vitest run --coverage",
     "rom:embed": "node scripts/rom-to-base64.js",
-    "deploy": "yarn test:run && yarn build && netlify deploy --prod",
+    "deploy": "yarn test:run && yarn build && npx netlify deploy --prod",
+    "deploy:build": "yarn build && npx netlify deploy --prod",
+    "netlify:build": "npx netlify build",
+    "netlify:dev": "npx netlify dev",
     "phase:1": "node scripts/phase-workflow.js 1 tests/unit/cpu-tests.js",
     "phase:2": "node scripts/phase-workflow.js 2 tests/unit/memory-tests.js",
     "phase:3": "node scripts/phase-workflow.js 3 \"tests/unit/cassette-tests.js tests/unit/io-tests.js\"",
@@ -26,6 +29,7 @@
     "@vitest/coverage-v8": "^1.6.0",
     "@vitest/ui": "^1.6.0",
     "jsdom": "^27.3.0",
+    "netlify-cli": "^23.12.3",
     "terser": "^5.31.0",
     "vite": "^5.4.0",
     "vitest": "^1.6.0"
