--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && node scripts/postbuild.js",
+    "build": "node scripts/render-docs.js && vite build && node scripts/postbuild.js",
     "build:serve": "vite build && node scripts/postbuild.js --serve",
     "preview": "vite preview",
     "test": "vitest",
@@ -29,6 +29,7 @@
     "@vitest/coverage-v8": "^1.6.0",
     "@vitest/ui": "^1.6.0",
     "jsdom": "^27.3.0",
+    "marked": "^17.0.1",
     "netlify-cli": "^23.12.3",
     "terser": "^5.31.0",
     "vite": "^5.4.0",
